bynkc/tests/fixtures/positive/804_locale_render_basic/src/app/greet.bynk
context app.greet

consumes bynk { Locale }
uses bynk.locale

service greeting {
  on call() -> Effect[String] given Locale {
    let tag <- Locale.current()
    Effect.pure(render(tag, message("hello")))
  }
}

service greetingWithName {
  on call(name: String) -> Effect[String] given Locale {
    let tag <- Locale.current()
    let msg = withText(message("greeting"), "name", name)
    Effect.pure(render(tag, msg))
  }
}

service greetingWithCountAndName {
  on call(name: String, count: Int) -> Effect[String] given Locale {
    let tag <- Locale.current()
    let msg = withWhole(withText(message("greeting"), "name", name), "count", count)
    Effect.pure(render(tag, msg))
  }
}
